[gd_scene load_steps=4 format=3 uid="uid://csobc2qu5k2wo"]

[ext_resource type="AudioStream" uid="uid://cjtcxjyaq2043" path="res://assets/sounds/hurt.wav" id="1_i8smy"]
[ext_resource type="Script" path="res://scenes/meleezone.gd" id="1_miysk"]
[ext_resource type="AudioStream" uid="uid://cq41reo5gnwxr" path="res://assets/sounds/explosion.wav" id="2_n4dfl"]

[node name="meleezone" type="Area2D"]
script = ExtResource("1_miysk")

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="DamagedSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_i8smy")
bus = &"Sound"

[node name="KOsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_n4dfl")
bus = &"Sound"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
